# ghostbin

./: .gitignore  Cargo.toml  PLAN.md  README.md
.omo/run-continuation/: ses_167726e06ffeYxwcgrliDYXFg8.json  ses_167a9af99ffe5WbLSTDce12Iv6.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  README.md
docs/tutorials/: getting-started.md  graph-view.md  ida-ghidra-import.md  plugins.md
src/: annotations.rs  binary.rs  bookmarks.rs  config.rs  decompiler.rs  diff.rs  disasm.rs  entropy.rs  export.rs  graph.rs  idb.rs  llm.rs  main.rs  marketplace.rs  openapi.rs  plugin.rs  security.rs  session.rs  strings.rs  websocket.rs  yara.rs
static/: index.html
